# go-vendored

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  test.txt  test_jsonproto.json
bazel/: BUILD.bazel  bazel.go  non_bazel.go
cmd/: BUILD.bazel  main.go
pkg/greetings/: BUILD.bazel
