load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/Shulammite-Aso/bazel-demo-app
# gazelle:go_naming_convention_external go_default_library

gazelle(
    name = "gazelle",
    args = [
        "-build_tags=integration",
    ],
    gazelle = "//:gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)
