###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "golang_0.42.0_vendor",
)

## bazel_dep(name = "endor_aspects", version = "0.0.1")
## local_path_override(
##    module_name = "endor_aspects",
##    path = "../../../..",
## )
