load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bazel",
    srcs = ["bazel.go"],  # keep
    importpath = "github.com/Shulammite-Aso/bazel-demo-app/bazel",
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//go/tools/bazel:go_default_library"],  # keep
)
